@@ -8,6 +8,7 @@ Changelog for 1.3.36
 * Fixed tax checkbox problem when one tax id includes another (Chris T)
 * Fixed update forgetting creditor (Nick P)
 * Fixed invoices rounding and printing differently (Giovanni B)
+* Deleted broken pricematrix check on existing rows in POS (Chris T)
 
 Chris T is Chris Travers
 Nick P is Nick Prater
